# EuroEval

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  LICENSE  NEW_DATASET_GUIDE.md  README.md  makefile  mkdocs.yaml  pyproject.toml
.github/: auto_assign.yaml  auto_assign.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: benchmark_dataset_request.yaml  bug.yaml  feature_request.yaml  language_request.yaml  model_evaluation_request.yaml
.github/workflows/: auto_assign_reviewers.yaml  ci.yaml
docs/: README.md  faq.md  methodology.md  python-package.md
docs/datasets/: README.md  albanian.md  belarusian.md  bosnian.md  bulgarian.md  catalan.md  croatian.md  czech.md  danish.md  dutch.md  english.md  estonian.md  faroese.md  finnish.md  french.md  german.md  greek.md  hungarian.md  icelandic.md  italian.md  latvian.md  lithuanian.md  norwegian.md  polish.md  portuguese.md  romanian.md  serbian.md  slovak.md  slovene.md  slovenian.md  spanish.md  swedish.md  ukrainian.md
docs/extras/: radial_plotter.md
docs/leaderboards/: README.md
docs/leaderboards/Monolingual/: albanian.md  bosnian.md  bulgarian.md  catalan.md  croatian.md  czech.md  danish.md  dutch.md  english.md  estonian.md  faroese.md  finnish.md  french.md  german.md  greek.md  hungarian.md  icelandic.md  italian.md  latvian.md  lithuanian.md  norwegian.md  polish.md  portuguese.md  romanian.md  serbian.md  slovak.md  slovene.md  spanish.md  swedish.md  ukrainian.md
docs/leaderboards/Multilingual/: baltic.md  european.md  finnic.md  germanic.md  mainland-scandinavian.md  romance.md  slavic.md
docs/tasks/: README.md  bias-detection.md  common-sense-reasoning.md  european-values.md  grammatical-error-detection.md  instruction-following.md  knowledge.md  linguistic-acceptability.md  named-entity-recognition.md  natural-language-inference.md  reading-comprehension.md  sentiment-classification.md  simplification.md  speed.md  summarization.md  tool-calling.md  translation.md
src/euroeval/: __init__.py  async_utils.py  benchmark_config_factory.py  benchmarker.py  caching_utils.py  callbacks.py  cli.py  closest_match.py  constants.py  custom_dataset_configs.py  data_loading.py  data_models.py  dataset_configs.py  eee_utils.py  enums.py  exceptions.py  finetuning.py  generation.py  generation_utils.py  human_evaluation.py  languages.py  logging_utils.py  metrics.py  model_cache.py  model_config.py  model_loading.py  preprocessing.py  safetensors_utils.py  scores.py  speed_benchmark.py  split_utils.py  string_utils.py  tasks.py  templates.py  tokenisation_utils.py  tokenization_utils.py  types.py  utils.py  yaml_config.py
src/euroeval/benchmark_modules/: base.py  fresh.py  hf.py  litellm.py  vllm.py
src/euroeval/dataset_configs/: __init__.py  albanian.py  belarusian.py  bosnian.py  bulgarian.py  catalan.py  croatian.py  czech.py  danish.py  dutch.py  english.py  estonian.py  faroese.py  finnish.py  french.py  german.py  greek.py  hungarian.py  icelandic.py  italian.py  latvian.py  lithuanian.py  norwegian.py  polish.py  portuguese.py  romanian.py  serbian.py  slovak.py  slovene.py  slovenian.py  spanish.py  swedish.py  translation_configs.py  ukrainian.py
src/euroeval/metrics/: __init__.py  base.py  bias.py  huggingface.py  ifeval_constraints.py  language_detection.py  llm_as_a_judge.py  pipeline.py  sacrebleu.py  speed.py  tool_calling.py
src/euroeval/prompt_templates/: __init__.py  base.py  classification.py  common_sense.py  grammatical_error_detection.py  instruction_following.py  knowledge.py  linguistic_acceptability.py  multiple_choice.py  named_entity.py  named_entity_recognition.py  nli.py  reading_comprehension.py  sentiment.py  sentiment_classification.py  simplification.py  summarization.py  token_classification.py  tool_calling.py  translation.py  wic.py
src/euroeval/task_group_utils/: multiple_choice_classification.py  question_answering.py  sequence_classification.py  text_to_text.py  token_classification.py
src/euroeval/task_utils/: multiple_choice_classification.py  question_answering.py  sequence_classification.py  text_to_text.py  token_classification.py
src/euroeval/templates/: __init__.py  base.py  common_sense.py  constants.py  knowledge.py  linguistic_acceptability.py  multiple_choice.py  utils.py  (+4 more)
src/scandeval/: dataset_configs.py
src/scripts/: constants.py  create_allocine.py  create_arc.py  create_arc_is.py  create_atsiliepimai.py  create_be_wsc.py  create_belebele.py  create_besls.py  create_bfcl.py  create_bg_ner_bsnlp.py  create_boolq_pt.py  create_cinexio.py  create_cnn_dailymail.py  create_conll_en.py  create_conll_es.py  create_conll_nl.py  create_copa_lv.py  create_copa_nl.py  create_cross_domain_uk_reviews.py  create_cs_gec.py  create_csfd_sentiment.py  create_csfd_sentiment_sk.py  create_czech_news.py  create_dacsa.py  create_dameta.py  create_dane.py  create_danish_citizen_tests.py  create_danish_entailment.py  create_danish_lexical_inference.py  create_danish_sentiment_in_context.py  create_dansk.py  create_danske_talemaader.py  create_danske_talemaader_old.py  create_danwic.py  create_dbrd.py  create_duidelijke_taal.py  create_duidelijke_taal_nl.py  create_dutch_cola.py  create_dutch_social.py  create_einbuergerungstest.py  (+141 more)
tests/: conftest.py  test_benchmark_config_factory.py  test_benchmarker.py  test_bias_metrics.py  test_callbacks.py  test_cli.py  test_constants.py  test_data_loading.py  test_data_models.py  test_dataset_configs.py  test_eee_utils.py  test_exceptions.py  test_finetuning.py  test_languages.py  test_llm_as_a_judge.py  test_model_config.py  test_model_loading.py  test_pipeline_metrics.py  test_preprocessing.py  test_safetensors_utils.py  test_scores.py  test_speed_benchmark.py  test_split_utils.py  test_startup_checks.py  test_string_utils.py  test_tasks.py  test_tokenisation_utils.py  test_tokenization_utils.py  test_types.py  test_utils.py  test_yaml_config.py
tests/test_benchmark_modules/: test_hf.py  test_vllm.py
tests/test_metrics/: test_sacrebleu.py
(+10 files in other folders)
