[project]
name = "EuroEval"
version = "17.0.0.dev"
description = "The robust European language model benchmark."
readme = "README.md"
authors = [
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
maintainers = [
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "torch>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "transformers[mistral-common]>=4.56.0,<5.0.0",
    "mistral-common[soundfile]",
    "accelerate>=1.9.0",
    "evaluate>=0.4.1",
    "datasets>=3.5.0",
    "click>=8.1.3",
    "pydantic>=2.6.0",
    "termcolor>=2.0.0",
    "seqeval>=1.2.2",
    "python-dotenv>=1.0.1",
    "huggingface-hub>=0.30.1",
    "pyinfer>=0.0.3",
    "sentencepiece>=0.1.96",
    "sacremoses>=0.1.1",
    "more-itertools>=10.5.0",
    "tenacity>=9.0.0",
    "litellm>=1.75.6,!=1.82.7,!=1.82.8",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "levenshtein>=0.24.0",
    "scikit-learn==1.6.1", # Required for loading European values pipeline
    "setuptools>=75.8.2",
    "demjson3>=3.0.6",
    "ollama>=0.5.1",
    "peft>=0.15.0",
    "protobuf>=2.0.0",
    "cloudpickle>=3.1.1",
    "sacrebleu>=2.5.1",
    "nltk>=3.9.1",
    "langdetect>=1.0.9",
    "pyyaml>=6.0",
    "lingua-language-detector>=2.2.0",
]

[project.optional-dependencies]
generative = [
    "timm>=1.0.19",
    # vLLM setup for MacOS (versions specified below in sources)
    "vllm; platform_system == 'Darwin'",
    "vllm-metal; platform_system == 'Darwin'",
    # vLLM setup for Linux (assuming CUDA is available here)
    "bitsandbytes>=0.43.1; platform_system == 'Linux'",
    "vllm[flashinfer]>=0.14.1; platform_system == 'Linux'",
    "ray>=2.53.0; platform_system == 'Linux'",
    "fbgemm-gpu>=1.0.0; platform_system == 'Linux'",
]
all = [
    "timm>=1.0.19",
    # vLLM setup for MacOS (versions specified below in sources)
    "vllm; platform_system == 'Darwin'",
    "vllm-metal; platform_system == 'Darwin'",
    # vLLM setup for Linux (assuming CUDA is available here)
    "bitsandbytes>=0.43.1; platform_system == 'Linux'",
    "vllm[flashinfer]>=0.14.1; platform_system == 'Linux'",
    "ray>=2.53.0; platform_system == 'Linux'",
    "fbgemm-gpu>=1.0.0; platform_system == 'Linux'",
]

[tool.uv.sources]
# PyPi releases seem to be lagging behind, so we use git sources directly
vllm-metal = { git = "https://github.com/vllm-project/vllm-metal.git", marker = "platform_system == 'Darwin'" }
# vLLM has no official wheels for macos arm64 and flashinfer is a default dep from 0.12.0 (which seems to only be x86_64 + cuda)
vllm = { git = "https://github.com/vllm-project/vllm.git", tag = "v0.14.1", marker = "platform_system == 'Darwin'" }

[tool.uv]
environments = [
  # Only support arm64 macos (dont try to resolve darwin + x86_64 or any other platforms)
  # specifically for vLLM building since it tries to resolve torch+cpu deps without disallowing darwin annoyingly
  # (https://github.com/vllm-project/vllm/blob/d7de043d55d1dd629554467e23874097e1c48993/requirements/cpu.txt#L9-L10)
  # This could be solved by them disallowing darwin in their cpu deps
  "platform_system == 'Darwin' and platform_machine == 'arm64'",
  # And any combination of other platforms
  "platform_system != 'Darwin'",
]

[project.urls]
Repository = "https://github.com/EuroEval/EuroEval"
Issues = "https://github.com/EuroEval/EuroEval/issues"

[project.license]
file = "LICENSE"

[project.scripts]
euroeval = "euroeval.cli:benchmark"
scandeval = "euroeval.cli:benchmark"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "readme-coverage-badger>=0.1.2",
    "click>=8.1.7",
    "ruff>=0.7.1",
    "nbstripout>=0.7.1",
    "coverage>=5.5",
    "lxml>=5.1.0",
    "mkdocs-material>=9.5.45",
    "mkdocs-include-markdown-plugin>=7.0.1",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkapi>=3.0.22",
    "pip>=24.3.1",
    "setuptools>=75.6.0",
    "cffi>=1.17.1",
    "cryptography>=44.0.0",
    "pycparser>=2.22",
    "types-aiofiles>=24.1.0.20241221",
    "types-cffi>=1.16.0.20241221",
    "types-pyopenssl>=24.1.0.20240722",
    "types-pytz>=2024.2.0.20241221",
    "types-pyyaml>=6.0.12.20241230",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20241016",
    "types-tabulate>=0.9.0.20241207",
    "types-setuptools>=75.8.0.20250110",
    "types-ujson>=5.10.0.20240515",
    "types-simplejson>=3.2.0.2025032",
    "debugpy>=1.8.13",
    "pytest-socket>=0.7.0",
    "pytest-depends>=1.0.1",
    "pyrefly>=0.43.1",
    "tqdm-stubs>=0.2.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".euroeval_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
select = [
    # Imports
    "I",
    "PLC0415",
    # Docstrings
    "D",
    "DOC",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly.errors]
missing-import = false
missing-attribute = false
# Pandas type stub issues - these are false positives due to incomplete type stubs
unsupported-operation = false
no-matching-overload = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=src/euroeval",
    "--color=yes",
    "-vvv",
    "--allow-unix-socket",
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "INFO"
testpaths = [
    "tests",
    "src/euroeval",
]
pythonpath = [
    "src",
    "src/scripts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
